--- a/frontend/web/.htaccess
+++ b/frontend/web/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine on
 
-# if a directory or a file exists, use it directly
+RewriteCond %{HTTP:X-Forwarded-Proto} !https
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-
-# otherwise forward it to index.php
-RewriteRule . index.php
+RewriteRule . index.php [L]
